--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.4.5",
-    "express": "^4.19.0"
+    "express": "^4.19.0",
+    "mongoose": "^8.2.2"
   }
 }
